<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MessageActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sendLayout"
        android:id="@+id/message_recycler_view"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/sendLayout"
        android:background="#fff"
        android:padding="5dp">

        <EditText
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_height="wrap_content"
            android:id="@+id/sendMessage"
            app:background="@android:color/transparent"
            android:hint="Type Message"
            android:layout_toLeftOf="@+id/sendButton"
            android:layout_centerVertical="true"
            />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/sendButton"
            android:background="@drawable/ic_send_accent_24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>



</RelativeLayout>